# snug

./: .codeclimate.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  omgorm.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  snug.py  test_omgorm.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: tests.yml
docs/: Makefile  advanced.rst  api.rst  conf.py  index.rst  make.bat  recipes.rst  requirements.txt  tutorial.rst
examples/: README.rst  conftest.py  test_github.py  test_ns.py  test_slack.py
examples/github/: __init__.py  core.py  demo.py  github.py  load.py  query.py  test_github.py  types.py
examples/ns/: __init__.py  core.py  load.py  ns.py  query.py  test_ns.py  types.py
examples/slack/: __init__.py  channels.py  chat.py  load.py  query.py  types.py
omgorm/: __init__.py  core.py  json.py  utils.py
requirements/: core.txt  dev.txt  docs.txt  examples.txt  test.txt
snug/: __about__.py  __init__.py  _async.py  abc.py  asnc.py  asyn.py  clients.py  compat.py  core.py  gentools.py  http.py  json.py  lib.py  load.py  pagination.py  pipe.py  query.py  sender.py  utils.py  wrap.py  xml.py
src/snug/: __init__.py  clients.py  http.py  pagination.py  query.py
tests/: conftest.py  py35_only.py  py3_only.py  test_abc.py  test_asnc.py  test_asyn.py  test_async.py  test_clients.py  test_core.py  test_gentools.py  test_http.py  test_json.py  test_lib.py  test_load.py  test_pagination.py  test_pipe.py  test_query.py  test_sender.py  test_utils.py  test_wrap.py  test_xml.py
tutorial/: __init__.py  composed0.py  composed2.py  composed3.py  composed4.py  composed_oop.py  composing_queries.py  composing_queries2.py  composing_queries3.py  composing_queries4.py  executors.py  hello_query.py  loading_objects.py  nested_queries.py  page.py  preparing_requests.py  query_api.py  relations.py
