[tool.poetry]
name = "snug"
version = "2.3.1"
description = "Write reusable web API interactions"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "snug", from = "src" },
]
readme = "README.rst"
include = ["HISTORY.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/snug"
keywords = [
    "api-wrapper",
    "http",
    "async",
    "graphql",
    "rest",
]

[tool.poetry.dependencies]
python = "^3.6.2,<4.0"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}
aiohttp = {version = "^3.4.4", optional = true}
requests = {version = "^2.20", optional = true}
httpx = {version = ">=0.21.1,<0.23.0", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.7.0"
mypy = "^0.931"
pytest = "^6.2.5"
tox = "^3.24.5"
black = "^21.12b0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
slotscheck = "^0.9.0"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
requests = ["requests"]
httpx = ["httpx"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 79
profile = 'black'

[tool.slotscheck]
strict-imports = true
require-superclass = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
