[tool.poetry]
name = "snug"
version = "2.4.0"
description = "Write reusable web API interactions"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "snug", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/snug"
keywords = [
    "api-wrapper",
    "http",
    "async",
    "graphql",
    "rest",
]

[tool.poetry.dependencies]
python = "^3.7,<4.0"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}
aiohttp = {version = "^3.4.4", optional = true}
requests = {version = "^2.20", optional = true}
httpx = {version = ">=0.21.1,<0.23.0", optional = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10"

[tool.poetry.group.typecheck.dependencies]
mypy = "^0.982"

[tool.poetry.group.linting.dependencies]
black = "^22.10"
flake8 = "^5.0.4"
isort = "^5.7.0"
slotscheck = "^0.15.0"

[tool.poetry.group.dev.dependencies]
tox = "^3.26"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
requests = ["requests"]
httpx = ["httpx"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 79
profile = 'black'

[tool.slotscheck]
strict-imports = true
require-superclass = true

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
