[tool.poetry]
name = "snug"
version = "2.4.0"
description = "Write reusable web API interactions"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [
    { include = "snug", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/snug"
keywords = [
    "api-wrapper",
    "http",
    "async",
    "graphql",
    "rest",
]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
aiohttp = {version = "^3.4.4", optional = true}
requests = {version = "^2.20", optional = true}
httpx = {version = ">=0.21.1,<0.29.0", optional = true}

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-mock = "^3.10"
pytest-httpbin = "^2.0.0"
# Werkzeug == 2.1.0 does not work with httpbin
#    https://github.com/postmanlabs/httpbin/issues/673
Werkzeug = "==2.0.3"

[tool.poetry.group.typecheck.dependencies]
mypy = "^1.0"

[tool.poetry.group.linting.dependencies]
black = "^25"
flake8 = "^7"
isort = "^6"
slotscheck = "^0.19.1"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
requests = ["requests"]
httpx = ["httpx"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 79
profile = 'black'

[tool.slotscheck]
strict-imports = true
require-superclass = true

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
